--- a/react_prac3/src/css/CSSModule.module.css
+++ b/react_prac3/src/css/CSSModule.module.css
@@ -11,3 +11,9 @@
     font-weight: 800;
     color: aqua;
 }
+
+.inverted{
+    color: black;
+    background: white;
+    border: 1px solid black;
+}
