--- a/react_prac3/src/css/util.scss
+++ b/react_prac3/src/css/util.scss
@@ -1,7 +1,17 @@
+@import '~open-color/open-color';
+@import '~include-media/dist/include-media';
+
+$breakpoints: (
+    small: 367px,
+    medium: 768px,
+    large: 1024px,
+    huge: 1200px,
+);
+
 $size: 100px;
 
 @mixin place-at-center {
-    top: 70%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
