React (ToDo Clone Coading - UI_Insert, ListItem) 20221208-2(2)

--- a/react_prac4/src/components/ToDoListItem.scss
+++ b/react_prac4/src/components/ToDoListItem.scss
@@ -47,4 +47,9 @@
             color: #ff8787;
         }
     }
+
+    // 동일한 컴포넌트가 여러개 배치 될 때 상단에 구분선 설정
+    & + &{
+        border-top: 1px solid #dee2e6
+    }
 }
