React (ToDo Clone Coading - 최적화_대량 샘플 데이터 다루기_지연로딩, 데이터의 불변성)20221208-5

--- a/react_prac4/src/components/ToDoListItem.scss
+++ b/react_prac4/src/components/ToDoListItem.scss
@@ -1,11 +1,19 @@
+.ToDoListItem-virtualized{
+    
+    // 동일한 컴포넌트가 여러개 배치 될 때 상단에 구분선 설정
+    & + &{
+        border-top: 1px solid #dee2e6;
+    }
+
+    &:nth-child(even){ // list의 홀수행 짝수행 다르게 표현하기 위한 설정
+        background: #f8f9fa;
+    }
+}
+
 .ToDoListItem{
     padding:1rem;
     display: flex;
     align-items: center;
-    
-    &:nth-child(even){ // list의 홀수행 짝수행 다르게 표현하기 위한 설정
-        background: #f7f9fa; 
-    }
 
     .checkbox{
         cursor: pointer;
